--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     width: 55%;
     display: flex;
     margin: 40px auto;
-    justify-content: space-between;
+    justify-content: space-evenly;
     border-bottom: 1px solid #828282;
 }
 .header a {
@@ -130,6 +130,9 @@
 media */
 
 @media screen and (max-width: 1024px) {
+    .container {
+        margin: 0 auto;
+    }
    .text img {
     width: 80%;
    }
@@ -152,8 +155,13 @@ media */
         
     }
     .text img {
-        width: 650px;
-        height: 260px;
+        width: 100%;
+    }
+    .header {
+        width: auto;
+    }
+    .programme {
+        text-align: center;
     }
    }
 }
